<resources>
    <string name="app_name">ZeQuizz</string>
    <string name="lib_online">En ligne</string>
    <string name="lib_offline">Hors ligne</string>
    <string name="btnOffIA">1 vs IA</string>
    <string name="btnOff1v1">1 vs 1</string>
    <string name="btnOffTeam">Equipe A vs Equipe B</string>
    <string name="btnOn1v1">1 vs 1 Online</string>
    <string name="team">Equipe</string>
    <string name="player">Joueur</string>
    <string name="score">Score</string>
    <string name="lives">Vies</string>
    <string name="DeQuelAnimalEstCeCri">De quel animal est ce cri?</string>
    <string name="Dog">Chien</string>
    <string name="Cat">Chat</string>
    <string name="Horse">Cheval</string>
    <string name="Cow">Vache</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgBeerContent">beerPicture</string>
</resources>
